tests/ecc-aws-188-vpc_unused_network_acl/placebo-red/ec2.DescribeNetworkAcls_1.json
{
    "status_code": 200,
    "data": {
        "NetworkAcls": [
            {
                "Associations": [],
                "Entries": [
                    {
                        "CidrBlock": "0.0.0.0/0",
                        "Egress": true,
                        "Protocol": "-1",
                        "RuleAction": "deny",
                        "RuleNumber": 32767
                    },
                    {
                        "CidrBlock": "0.0.0.0/0",
                        "Egress": false,
                        "Protocol": "-1",
                        "RuleAction": "deny",
                        "RuleNumber": 32767
                    }
                ],
                "IsDefault": false,
                "NetworkAclId": "acl-08075389d63839a9b",
                "Tags": [
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-188-vpc_unused_network_acl"
                    }
                ],
                "VpcId": "vpc-12345asdfg",
                "OwnerId": "this"
            }
        ],
        "ResponseMetadata": {}
    }
}
